Fix 3 issues: cancel button, 기타 sub-cluster, stats double-counting
1. Clustering completion dialog: change '건너뛰기' to '취소' that
   returns to the page instead of navigating to export. Unmerged
   clusters must be resolved before proceeding.

2. Export results tab: replace raw_data_ids-based undefined calculation
   with simple subtraction (parent count - sub-cluster counts). Show
   unassigned children as "기타" sub-cluster with "기타" keyword.
   Remove unused calculateAmountForRawIds method.

3. Detail Clustering stats double-counting: exclude merge parent
   record (cluster_number == clusterId) from all scope queries.
   With new model where cluster_id = own cluster_number, the parent
   itself appeared in cluster_id=clusterId queries and its aggregated
   count doubled all data. Added cluster_number.ne(clusterId) to:
   getAllClustersInScope, getUnmergedClusters, getAllUnmergedClusterNumbers,
   advancedSearch, getAdvancedSearchClusterNumbers, hasSupplierClustering,
   department query.

https://claude.ai/code/session_01Hfsc7xkp9AVYcY1dfjd4Px